
HIGHEST PRIORITY:
- get new background image from Archie, add more to left of headwall, improve colors, add 3D cues, stretch y-axis of valley floor, reduce height of mountains to show more peaks
- increase mvt y-scale by 2x, decrease birds-eye view camera y-scale by 2x
- start with terminus at far right of zoomed viewport
- visual representation of snowfall (gradient paint, clipped to sky)
- change snowfall visibility with snowfall checkbox

HIGH PRIORITY:
- make shape of surface ripples look random
- make sure everything works properly when clock is paused
- hide any features that aren't implemented for July 25 deadline

MEDIUM PRIORITY:
- main control panel should be the same height in all modules
- eliminate code duplication in modules
- start sim in steady state, with debris & ripples across entire glacier length, and moraine at terminus
- tweak alignment of mountains image, perspective (or image?) is a little off at headwall
- switch user-interface between English and metric units
- add yaw to fake 3D perspective (terminus, ELA, etc) 
? add headwallX to new ice thickness model in model.txt, which assumes headwallX=0
- make default speed 2 years per sec
- provide time estimate for climate experiments interface
- Experiments module
- more "cartoonish" view for Basic panel?
- move steady state button to play area?
- change color of ice flow vectors so that they are different than debris color?
- "steady state" button needs to advance clock to the time at which the glacier would reach its steady state
- "steady state" button needs to fill in missing data in time-dependent graphs
- "steady state" button needs to fill glacier with debris and surface ripples
- always collect data for time-based graphs, keep "latest" & "historical" data points, compress historical, limit historical size
- add zoom in/out button for time-based graphs; show scrolling "latest" data or complete "historical"
- implement Save/Load feature
- PlayArea class is too big, refactor