@@ -7,7 +7,6 @@ HIGHEST PRIORITY:
 - increase mvt y-scale by 2x, decrease birds-eye view camera y-scale by 2x
 - start with terminus at far right of zoomed viewport
 - visual representation of snowfall (gradient paint, clipped to sky)
-- change snowfall visibility with snowfall checkbox
 
 HIGH PRIORITY:
 - make shape of surface ripples look random
@@ -85,6 +84,8 @@ CLEANUP:
 
 
 DONE:
+7/19/08 - change snowfall visibility with snowfall check box
+7/19/08 - create a temporary node for snowfall
 7/19/08 - turn off help for modules, since we don't have any yet
 7/19/08 - organize imports
 7/19/08 - keep track of dialog positions, always reopen dialog where it was previously
